--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>YT Player</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <!DOCTYPE html>
@@ -13,34 +13,19 @@
     <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
     <div id="player"></div>
 
-    <div id = "progress-bar">
-            <div id = "dot"></div>
+    <!-- Progress Bar For Video -->
+    <div id="progress-bar">
+        <!-- Progress dot on the progress bar -->
+        <div id="dot"></div>
     </div>
 
-   <div id = "buttons">
-     <button id = "playButton">Play</button>
-    <button id = "pauseButton">Pause</button>
-   </div>
-    
+    <!-- Play and Pause Buttons -->
+    <div id="buttons">
+        <button id="playButton">Play</button>
+        <button id="pauseButton">Pause</button>
+    </div>
+
     <script>
-        // function progressBarLoop(){
-        //     let progressBar = $('progressBar');
-        //     let progressSquare = $('square');
-        //     progressBar.click(function(event){
-        //         let divOffSet = $(this).offset();
-        //         let seekTo = (event.pageX - divOffSet.left)/600* player.getDuration();
-        //         let myData = {state: 'play', time: seekTo};
-        //         socket.emit('bar', myData);        
-        //     });
-        //     setInterval(function(){
-        //         if(player == null || progressBar == null){
-        //             return;
-        //         }
-        //     let fraction = player.getCurrentTime()/player.getDuration()*100;
-        //     progressSquare.css('left', fraction.toString() + '%');
-        //     }, 200);
-        // }
-        // 2. This code loads the IFrame Player API code asynchronously.
         var tag = document.createElement('script');
 
         tag.src = "https://www.youtube.com/iframe_api";
@@ -48,19 +33,17 @@
         firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 
         // 3. This function creates an <iframe> (and YouTube player)
-        //    after the API code downloads.
         var player;
 
         function onYouTubeIframeAPIReady() {
             player = new YT.Player('player', {
                 height: '390',
                 width: '640',
-                videoId: 'N_0O0f4Y19E',
+                videoId: 'phJfuXL91wM',
                 events: {
-                    'onReady': onPlayerReady,
-                    'onStateChange': onPlayerStateChange
+                    'onReady': onPlayerReady
                 },
-                playerVars : {
+                playerVars: {
                     controls: 0,
                     disablekb: 1,
                     showinfo: 0,
@@ -72,32 +55,30 @@
 
         // 4. The API will call this function when the video player is ready.
         function onPlayerReady(event) {
-            // event.target.playVideo();
+    
         }
 
         // 5. The API calls this function when the player's state changes.
-        //    The function indicates that when playing a video (state=1),
-        //    the player should play for six seconds and then stop.
-        var done = false;
+        // function onPlayerStateChange(event) {
 
-        function onPlayerStateChange(event) { 
-            // if (event.data == YT.PlayerState.PLAYING && !done) {
-            //     setTimeout(stopVideo, 6000);
-            //     done = true;
-            // }
-            
-        }
+        // }
 
-        function stopVideo() {
-            player.stopVideo();
-        }
     </script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src = "/socket.io/socket.io.js"></script>
-    <script src = "player-controls.js"></script>
+    <!-- Bootstrap / jQuery -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
+    <!-- Socket IO and Player Controls -->
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="player-controls.js"></script>
 </body>
 
 </html>
