connected to mongodb

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    Hello World!
-    <h1></h1>
+    <input type="text" name="" id="">
+    <button>Create Room</button>
     <script src ="index.js"></script>
 </body>
 </html>
