room exists route, rate limiting, slowdown

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text" name="" id="">
+    Password For Room:
+    <input type="password" name="" id="">
     <button>Create Room</button>
-    <script src ="index.js"></script>
+    <script type="module" src ="index.js"></script>
 </body>
 </html>
