beginning of json web tokens

--- a/views/join.ejs
+++ b/views/join.ejs
@@ -9,7 +9,7 @@
     <h1>Join Room</h1>
     <h2> <%= `Room: ${roomID}` %> </h2>
     Room Password:
-    <input type="text" name="" id="">
+    <input type="password" name="" id="">
     <button>Join Room</button>
 </body>
 </html>
